--- a/search.html
+++ b/search.html
@@ -49,7 +49,7 @@ Pawanraj Sadhwani                </a>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                            <li><a href="https://pawanrajs.com/search">Search</a></li>
+                            <li><a href="/search">Search</a></li>
                             <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
                                 <a href="https://pawanrajs.com/archives">Blog</a>
@@ -107,7 +107,7 @@ Pawanraj Sadhwani                </a>
       <!-- Content -->
       <div class="content">
           <section>
-            <form action="https://pawanrajs.com/search">
+            <form action="/search">
               <div class="tipue_search_group">
 
                 <div class="row gtr-0 aln-middle aln-left">
