--- a/archives2.html
+++ b/archives2.html
@@ -49,7 +49,7 @@ Pawanraj Sadhwani                </a>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                            <li><a href="https://pawanrajs.com/search">Search</a></li>
+                            <li><a href="/search">Search</a></li>
                             <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
                                 <a href="https://pawanrajs.com/archives">Blog</a>
@@ -196,7 +196,7 @@ Pawanraj Sadhwani                </a>
         <h3>Search</h3>
     </header>
     <span>
-        <form action="https://pawanrajs.com/search">
+        <form action="/search">
             <div class="tipue_search_group">
                 <div class="row gtr-0 aln-middle aln-left">
                     <div class="col-9 col-8-mobile">
