--- a/index7.html
+++ b/index7.html
@@ -75,7 +75,7 @@ Pawanraj Sadhwani                </a>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                            <li><a href="https://pawanrajs.com/search">Search</a></li>
+                            <li><a href="/search">Search</a></li>
                             <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
                                 <a href="https://pawanrajs.com/archives">Blog</a>
