--- a/index7.html
+++ b/index7.html
@@ -12,7 +12,7 @@
             <h2>Pawanraj Sadhwani</h2>
         </header>
 
-            <p><a href="/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.</p>
+            <p><a href="https://pawanrajs.com/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.</p>
 
         <!--
         <footer>
@@ -38,18 +38,18 @@
     <meta name="keywords" content="" />
  
     <!-- CSS -->
-    <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
-    <link rel="stylesheet" href="/theme/css/pygment.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/theme/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/theme/css/pygment.css" type="text/css" />
     
     <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 
-        <link href="/theme/css/custom.css" rel="stylesheet" type="text/css">
+        <link href="https://pawanrajs.com/theme/css/custom.css" rel="stylesheet" type="text/css">
  
 
-        <link href="/theme/tipuesearch/tipuesearch.css" rel="stylesheet"> 
+        <link href="https://pawanrajs.com/theme/tipuesearch/tipuesearch.css" rel="stylesheet"> 
 
     <noscript>
-        <link rel="stylesheet" href="/theme/noscript.css" type="text-css" />
+        <link rel="stylesheet" href="https://pawanrajs.com/theme/noscript.css" type="text-css" />
     </noscript>
 
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
@@ -68,41 +68,41 @@ Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
         <!-- Header -->
         <header id="header" class="alt" >
             <h1 class="logo">
-                <a href="/">
-                        <img src="/images/headlogo.png" width="25"/> 
+                <a href="https://pawanrajs.com/">
+                        <img src="https://pawanrajs.com/images/headlogo.png" width="25"/> 
 Pawanraj Sadhwani                </a>
             </h1>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
                             <li><a href="/search">Search</a></li>
-                            <li><a href="/archives">Archives</a></li>
+                            <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
-                                <a href="/archives">Blog</a>
+                                <a href="https://pawanrajs.com/archives">Blog</a>
                                 <ul>
  
                                         <li >
-                                            <a href="/category/conversations-with-myself">Conversations with myself</a>
+                                            <a href="https://pawanrajs.com/category/conversations-with-myself">Conversations with myself</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/personal">Personal</a>
+                                            <a href="https://pawanrajs.com/category/personal">Personal</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/reviews">Reviews</a>
+                                            <a href="https://pawanrajs.com/category/reviews">Reviews</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/scribbles">Scribbles</a>
+                                            <a href="https://pawanrajs.com/category/scribbles">Scribbles</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/technology">Technology</a>
+                                            <a href="https://pawanrajs.com/category/technology">Technology</a>
                                         </li>
  
                                 </ul>
@@ -110,11 +110,11 @@ Pawanraj Sadhwani                </a>
 
  
                                 <li >
-                                    <a href="/about-pawanraj">About</a>
+                                    <a href="https://pawanrajs.com/about-pawanraj">About</a>
                                 </li>
  
 
-                        <li><a href="/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
+                        <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -127,11 +127,11 @@ Pawanraj Sadhwani                </a>
         <h2><strong>Hi! I am Pawanraj Sadhwani</strong></h2>
 
         <p>
-            I <strong><a href="/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
-            <a href="/category/technology">technology</a>,
-            <a href="/category/personal">my life</a> or
-            <a href="/category/scribbles">nothing at all.</a><br />
-            <a href="/category/conversations-with-myself">My subconscious talked me </a>into creating this site and writing more.<br />
+            I <strong><a href="https://pawanrajs.com/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
+            <a href="https://pawanrajs.com/category/technology">technology</a>,
+            <a href="https://pawanrajs.com/category/personal">my life</a> or
+            <a href="https://pawanrajs.com/category/scribbles">nothing at all.</a><br />
+            <a href="https://pawanrajs.com/category/conversations-with-myself">My subconscious talked me </a>into creating this site and writing more.<br />
         </p>
     </header>
 
@@ -149,14 +149,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-heart"></span>
                     <header>
-                        <a href="/posts/love-because" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/love-because" rel='bookmark'>
                             <h3>Because</h3>
                         </a>
                     </header>
                     <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/love-because" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/love-because" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -166,14 +166,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
-                        <a href="/posts/being-ok" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/being-ok" rel='bookmark'>
                             <h3>Being OK</h3>
                         </a>
                     </header>
                     <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/being-ok" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/being-ok" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -183,14 +183,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="/posts/jump" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/jump" rel='bookmark'>
                             <h3>Jump!</h3>
                         </a>
                     </header>
                     <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/jump" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/jump" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -204,7 +204,7 @@ Pawanraj Sadhwani                </a>
     <div class="col-4 pagination pagination-left">
         <section>
             <header>
-                     <a href="/index6.html#latest_posts">
+                     <a href="https://pawanrajs.com/index6.html#latest_posts">
                 &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
@@ -241,7 +241,7 @@ Pawanraj Sadhwani                </a>
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button primary">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
+            <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
@@ -271,14 +271,14 @@ Pawanraj Sadhwani                </a>
 </footer>    </div> <!-- end DIV #page-wrapper -->
   
     <!-- JAVASCRIPT -->
-    <script src="/theme/js/jquery.min.js"></script>
-    <script src="/theme/js/jquery.dropotron.min.js"></script>
-    <script src="/theme/js/jquery.scrolly.min.js"></script>
-    <script src="/theme/js/jquery.scrollex.min.js"></script>
-    <script src="/theme/js/browser.min.js"></script>
-    <script src="/theme/js/breakpoints.min.js"></script>
-    <script src="/theme/js/util.js"></script>
-    <script src="/theme/js/main.js"></script>
+    <script src="https://pawanrajs.com/theme/js/jquery.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/jquery.dropotron.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/jquery.scrolly.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/jquery.scrollex.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/browser.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/breakpoints.min.js"></script>
+    <script src="https://pawanrajs.com/theme/js/util.js"></script>
+    <script src="https://pawanrajs.com/theme/js/main.js"></script>
 
     
     <!-- add scripts for search here in search.html -->
