deploy: pawanrajs/pawanrajs.com@f565f734fd91c5352aa6e18ee61254a06742b6c8

--- a/tags.html
+++ b/tags.html
@@ -328,8 +328,9 @@ Pawanraj Sadhwani                </a>
         <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
     </li>
 </ul>
+
     <ul class="copyright">
-      <li>&copy; Pawanraj Sadhwani</li>
+      <li>&copy; 2021 Pawanraj Sadhwani</li>
       <li>Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</li>
     </ul>
 
