deploy: pawanrajs/pawanrajs.com@f610bf1a2bd34524219292bf21ad93733fe3abaa

--- a/archives3.html
+++ b/archives3.html
@@ -116,6 +116,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/the-facebook-experiment">
+                                <h3>The Facebook Experiment</h3>
+                            </a>
+                        </header>
+                        <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/to-like-or-not-to-like">
                                 <h3>To Like or Not to Like...</h3>
                             </a>
@@ -148,15 +157,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/nuclear-power">
-                                <h3>Nuclear Power</h3>
-                            </a>
-                        </header>
-                        <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …</p>
                     </section>
  
 <div class="row">
@@ -222,27 +222,21 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -273,6 +267,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -308,12 +308,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -323,16 +323,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
