--- a/archives5.html
+++ b/archives5.html
@@ -116,6 +116,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/being-ok">
+                                <h3>Being OK</h3>
+                            </a>
+                        </header>
+                        <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/jump">
                                 <h3>Jump!</h3>
                             </a>
@@ -186,27 +195,21 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -237,6 +240,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -272,12 +281,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -287,16 +296,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
