--- a/index5.html
+++ b/index5.html
@@ -152,6 +152,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-book"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/the-power-of-stories" rel='bookmark'>
+                            <h3>The Power of Stories...</h3>
+                        </a>
+                    </header>
+                    <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/the-power-of-stories" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel='bookmark'>
@@ -183,23 +200,6 @@ Pawanraj Sadhwani                </a>
                     </footer>
                 </section>
             </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-pencil-alt"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/nuclear-power" rel='bookmark'>
-                            <h3>Nuclear Power</h3>
-                        </a>
-                    </header>
-                    <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/nuclear-power" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
         </div>
         <!-- /.row -->
 
@@ -216,7 +216,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 5 / 7</header>
+            <header>Page 5 / 8</header>
         </section>
     </div>
 
