--- a/index7.html
+++ b/index7.html
@@ -152,6 +152,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-pencil-alt"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/reasonable" rel='bookmark'>
+                            <h3>Reasonable...</h3>
+                        </a>
+                    </header>
+                    <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/reasonable" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-heart"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/love-because" rel='bookmark'>
@@ -183,23 +200,6 @@ Pawanraj Sadhwani                </a>
                     </footer>
                 </section>
             </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-smile"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/jump" rel='bookmark'>
-                            <h3>Jump!</h3>
-                        </a>
-                    </header>
-                    <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/jump" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
         </div>
         <!-- /.row -->
 
@@ -216,14 +216,14 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 7 / 7</header>
+            <header>Page 7 / 8</header>
         </section>
     </div>
 
     <div class="col-4  pagination pagination-right">
         <section>
             <header>
-            </header>
+                <a href="https://pawanrajs.com/index8.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
