--- a/index8.html
+++ b/index8.html
@@ -152,50 +152,16 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
-                    <span class="icon solid featured fa-comments"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/so-it-begins" rel='bookmark'>
-                            <h3>So it begins...</h3>
-                        </a>
-                    </header>
-                    <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/so-it-begins" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-frown"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/not-today" rel='bookmark'>
-                            <h3>Not Today</h3>
-                        </a>
-                    </header>
-                    <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/not-today" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/growing-up" rel='bookmark'>
-                            <h3>Growing up.</h3>
+                        <a href="https://pawanrajs.com/posts/jump" rel='bookmark'>
+                            <h3>Jump!</h3>
                         </a>
                     </header>
-                    <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so th</p>
+                    <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/growing-up" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/jump" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -209,21 +175,21 @@ Pawanraj Sadhwani                </a>
     <div class="col-4 pagination pagination-left">
         <section>
             <header>
-                     <a href="https://pawanrajs.com/index2.html#latest_posts">
+                     <a href="https://pawanrajs.com/index7.html#latest_posts">
                 &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 3 / 8</header>
+            <header>Page 8 / 8</header>
         </section>
     </div>
 
     <div class="col-4  pagination pagination-right">
         <section>
             <header>
-                <a href="https://pawanrajs.com/index4.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
+            </header>
         </section>
     </div>
 
