--- a/tags.html
+++ b/tags.html
@@ -115,27 +115,21 @@ Pawanraj Sadhwani                </a>
             <section>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -166,6 +160,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -201,12 +201,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -216,16 +216,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -243,6 +243,24 @@ Pawanraj Sadhwani                </a>
 <section class="wrapper style1 container special">
     <h3>Recent Posts</h3>
     <div class="row">
+        <div class="col-4 col-12-narrower">
+
+            <section>
+                <span class="icon solid featured fa-book"></span>
+                <header>
+                    <a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger" rel='bookmark'>
+                        <h3>Book Review: The Time Traveler's Wife by Audrey Niffenegger</h3>
+                    </a>
+                </header>
+                <p>[<a href="https://www.goodreads.com/book/show/440</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
         <div class="col-4 col-12-narrower">
 
             <section>
@@ -274,24 +292,6 @@ Pawanraj Sadhwani                </a>
                 <footer>
                     <ul class="buttons">
                         <li><a href="https://pawanrajs.com/posts/cloud-application-security-best-practices" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-        <div class="col-4 col-12-narrower">
-
-            <section>
-                <span class="icon solid featured fa-code"></span>
-                <header>
-                    <a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" rel='bookmark'>
-                        <h3>Building My Static Site with Pelican</h3>
-                    </a>
-                </header>
-                <p>What are we even talking about? In a traditional setup, a request recieved by the web-server (like NGINX) is forwarded to the Content Management System (CMS, like Wordpress). The CMS u</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" class="button small">Read More</a></li>
                     </ul>
                 </footer>
             </section>
