--- a/archives.html
+++ b/archives.html
@@ -116,6 +116,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger">
+                                <h3>Book Review: The Time Traveler's Wife by Audrey Niffenegger</h3>
+                            </a>
+                        </header>
+                        <p>[The Time Traveler's Wife by Audrey Niffenegger is a love story of Henry and Clare. Henry suffers from a genetic disorder that causes him to time-travel unpredictably, and his artist wife Clare suffers... well she suffers most of the consequences of this unpredictability. The plot is extremely simple per se …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/spring-cleaning">
                                 <h3>Spring Cleaning</h3>
                             </a>
@@ -148,15 +157,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>New year, new me!</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/oooh-shiny">
-                                <h3>Oooh Shiny!</h3>
-                            </a>
-                        </header>
-                        <p>I think we might be on to something here. But first, I must play the next move on my chess game, but before that let me finish the bo- oooh shiny!</p>
                     </section>
  
 <div class="row">
@@ -221,27 +221,21 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -272,6 +266,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -307,12 +307,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -322,16 +322,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
