--- a/archives2.html
+++ b/archives2.html
@@ -116,6 +116,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/oooh-shiny">
+                                <h3>Oooh Shiny!</h3>
+                            </a>
+                        </header>
+                        <p>I think we might be on to something here. But first, I must play the next move on my chess game, but before that let me finish the bo- oooh shiny!</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/so-it-begins">
                                 <h3>So it begins...</h3>
                             </a>
@@ -148,15 +157,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The house feels like a home... There's an interesting Woody Allen …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/the-facebook-experiment">
-                                <h3>The Facebook Experiment</h3>
-                            </a>
-                        </header>
-                        <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …</p>
                     </section>
  
 <div class="row">
@@ -222,27 +222,21 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -273,6 +267,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -308,12 +308,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -323,16 +323,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
