--- a/archives4.html
+++ b/archives4.html
@@ -116,6 +116,15 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="https://pawanrajs.com/posts/nuclear-power">
+                                <h3>Nuclear Power</h3>
+                            </a>
+                        </header>
+                        <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="https://pawanrajs.com/posts/this-way-and-that">
                                 <h3>This way and That...</h3>
                             </a>
@@ -148,15 +157,6 @@ Pawanraj Sadhwani                </a>
                             </a>
                         </header>
                         <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="https://pawanrajs.com/posts/being-ok">
-                                <h3>Being OK</h3>
-                            </a>
-                        </header>
-                        <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
                     </section>
  
 <div class="row">
@@ -222,27 +222,21 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/best-practices">
-            best practices
+        <a href="https://pawanrajs.com/tag/audrey-niffenegger">
+            audrey niffenegger
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/book">
             book
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="https://pawanrajs.com/tag/book-review">
+            book review
                     <span class="badge">(2)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud">
-            cloud
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/cloud-security">
-            cloud security
-                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -273,6 +267,12 @@ Pawanraj Sadhwani                </a>
         <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/fiction">
+            fiction
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
@@ -308,12 +308,12 @@ Pawanraj Sadhwani                </a>
     <li class="tag-2 list-group-item">
         <a href="https://pawanrajs.com/tag/review">
             review
-                    <span class="badge">(2)</span>
+                    <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/security">
-            security
+        <a href="https://pawanrajs.com/tag/science-fiction">
+            science fiction
                     <span class="badge">(1)</span>
             </a>
     </li>
@@ -323,16 +323,16 @@ Pawanraj Sadhwani                </a>
                     <span class="badge">(4)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="https://pawanrajs.com/tag/spring-cleaning">
-            spring cleaning
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="https://pawanrajs.com/tag/time-traveler">
+            time traveler
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
