--- a/index2.html
+++ b/index2.html
@@ -152,6 +152,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-code"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" rel='bookmark'>
+                            <h3>Building My Static Site with Pelican</h3>
+                        </a>
+                    </header>
+                    <p>What are we even talking about? In a traditional setup, a request recieved by the web-server (like NGINX) is forwarded to the Content Management System (CMS, like Wordpress). The CMS u</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/happy-new-year" rel='bookmark'>
@@ -183,23 +200,6 @@ Pawanraj Sadhwani                </a>
                     </footer>
                 </section>
             </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-comments"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/so-it-begins" rel='bookmark'>
-                            <h3>So it begins...</h3>
-                        </a>
-                    </header>
-                    <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/so-it-begins" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
         </div>
         <!-- /.row -->
 
@@ -216,7 +216,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 2 / 7</header>
+            <header>Page 2 / 8</header>
         </section>
     </div>
 
