--- a/index4.html
+++ b/index4.html
@@ -152,6 +152,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-smile"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/we-all-need-the-eggs" rel='bookmark'>
+                            <h3>We all Need the Eggs...</h3>
+                        </a>
+                    </header>
+                    <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging.</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/we-all-need-the-eggs" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-thumbs-up"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/the-facebook-experiment" rel='bookmark'>
@@ -183,23 +200,6 @@ Pawanraj Sadhwani                </a>
                     </footer>
                 </section>
             </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-book"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/the-power-of-stories" rel='bookmark'>
-                            <h3>The Power of Stories...</h3>
-                        </a>
-                    </header>
-                    <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/the-power-of-stories" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
         </div>
         <!-- /.row -->
 
@@ -216,7 +216,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 4 / 7</header>
+            <header>Page 4 / 8</header>
         </section>
     </div>
 
