--- a/index6.html
+++ b/index6.html
@@ -152,6 +152,23 @@ Pawanraj Sadhwani                </a>
             <div class="col-4 col-12-narrower">
 
                 <section>
+                    <span class="icon solid featured fa-pencil-alt"></span>
+                    <header>
+                        <a href="https://pawanrajs.com/posts/nuclear-power" rel='bookmark'>
+                            <h3>Nuclear Power</h3>
+                        </a>
+                    </header>
+                    <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="https://pawanrajs.com/posts/nuclear-power" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+
+                <section>
                     <span class="icon solid featured fa-arrows-alt-h"></span>
                     <header>
                         <a href="https://pawanrajs.com/posts/this-way-and-that" rel='bookmark'>
@@ -183,23 +200,6 @@ Pawanraj Sadhwani                </a>
                     </footer>
                 </section>
             </div>
-            <div class="col-4 col-12-narrower">
-
-                <section>
-                    <span class="icon solid featured fa-pencil-alt"></span>
-                    <header>
-                        <a href="https://pawanrajs.com/posts/reasonable" rel='bookmark'>
-                            <h3>Reasonable...</h3>
-                        </a>
-                    </header>
-                    <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="https://pawanrajs.com/posts/reasonable" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-            </div>
         </div>
         <!-- /.row -->
 
@@ -216,7 +216,7 @@ Pawanraj Sadhwani                </a>
 
     <div class="col-4  pagination pagination-middle">
         <section>
-            <header>Page 6 / 7</header>
+            <header>Page 6 / 8</header>
         </section>
     </div>
 
